--- a/css/styles.css
+++ b/css/styles.css
@@ -32,15 +32,21 @@ p{
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
   outline: 2px solid tomato;
 }
-.head{
+/* .head{
   padding-top: 32px;
   padding-bottom: 32px;
+} */
+.main-nav {
+  display: flex;
+  align-items: center;
 }
-
   
 .logo {
+  margin-right: 93px;
   color: var(--black);
   font-family: Raleway, sans-serif;
   font-size: 26px;
@@ -55,27 +61,54 @@ p{
   color: var(--accent);
 }
 
+
+.site-nav{
+  display: inline-flex;
+}
+
 .site-nav .link, .contact .link {
-font-size: 14px;
-font-weight: 500;
-line-height: 1.14px;
-letter-spacing: 0.02em;
-text-decoration: none;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.14px;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 
 }
 .site-nav .link {
-  color: var(--title-text-color);}
+  color: var(--title-text-color);
+}
+/* .item :not(:last-child ) { 
+  margin-right : 50 px ; 
+} */
+
+.site-nav .link {
+margin-right:  50px;
+} 
 
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent);
 }
 /*Contacts*/
-.contact .link {
-  color: var(--primary-text-color);
- 
+.contact{
+  display: flex;
+  margin-left: auto;
 
 }
+.contact .link {
+  color: var(--primary-text-color);
+
+}
+
+.contact .mail{
+margin-right:  50px; ;
+}
+
+
+
 .contact .link:focus,
 .contact .link:hover {
   color: var(--accent);
@@ -132,6 +165,9 @@ text-decoration: none;
 
 }
 /*Features*/
+.features{
+  display: flex;
+}
 .features .title {
   margin-top: 0px;
   margin-bottom: 10px;
