--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --white: #FFFFFF;
   --black: #000000;
   --background-color: #2F303A;
+  --backgraund-color2: #F5F4FA;
 }
 
 
@@ -13,6 +14,7 @@
   padding: 0px;
   margin: 0px;
   list-style: none;
+  font-style: normal;
 }
 .img{
   display:  inline-block;
@@ -27,9 +29,8 @@ body {
   font-family: Roboto, sans-serif;
 
 }
-h2,
-h3,
-p{
+.subject
+{
   margin-top: 0px;
   margin-bottom: 0px;
 }
@@ -41,6 +42,7 @@ p{
   padding-right: 15px;
 
 }
+
 
 .main-nav {
   display: flex;
@@ -72,6 +74,7 @@ p{
 
 .site-nav{
   display: inline-flex;
+  
 }
 .site-nav :not( :last-child) { 
   margin-right: 50px; 
@@ -79,8 +82,9 @@ p{
 
 .site-nav .link, .contact .link {
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 39px;
+  padding-bottom: 40px;
+
   font-size: 14px;
   font-weight: 500;
   line-height: 1.14px;
@@ -138,6 +142,7 @@ p{
   padding: 10px 32px;
   display: inline-block;
   min-width: 200px;
+  height: 50px;
   margin-bottom: 200px;
   
   font-family: inherit;
@@ -165,11 +170,9 @@ p{
 /*Features*/
 .features{
   display: inline-flex;
-  margin-right: -30px;
 }
-.feature .item{
-  margin-right: 30px;
-  flex-basis : calc((100% / 4) - 30px); 
+.item:not(:last-child ) { 
+  margin-bottom : 30 px; 
 }
 
 .features-title{
@@ -186,11 +189,11 @@ p{
   letter-spacing: 0.03em;
   text-transform: uppercase;  
 }
-.features .item{
+.item{
   display: inline-block;
-  
   margin-right: 30px;
   margin-top: 94px;
+
 }
 
 .section{
@@ -216,17 +219,22 @@ p{
 
 
 /*Our team*/
+.section-our-team{
+  background-color:var(--backgraund-color2) ;
+}
 .team{
   padding-top: 94px;
 }
 .our-team{
   display: flex;
-    flex-wrap: wrap;
-    margin-right:-30px ;
+  flex-wrap: wrap;
+  margin-right:-30px ;
+  
 }
 .our-team-item{
   margin-right: 30px;
   flex-basis: calc((100% / 4) - 30px);
+  background-color: var(--white);
 
 }
 
@@ -265,7 +273,11 @@ p{
   display: inline-block;
   margin-bottom: 60px;
 }
+.addres-list{
+  display: block;
+}
 .footer-contact{
+  
   color: var(--white);
   font-size: 14px;
   line-height: 1.71;
@@ -273,9 +285,21 @@ p{
   text-decoration: none;
   font-style: normal;
 }
+.features-link{
+  margin-top: 9px;
+  margin-bottom: 9px;
+}
+.footer-item{
+  color: var(--primary-text-color);
+}
+
 
 
 /*Portfolio*/
+.header{ 
+border-bottom: 1px solid #ECECEC;
+}
+
 .portfolio-link{
   text-decoration: none;
 }
@@ -293,6 +317,7 @@ p{
 
 .portolio-button{
   border-radius: 4px;
+  border-color: transparent ;
   
   background: #F5F4FA;
   color: var(--title-text-color) ;
@@ -319,21 +344,22 @@ p{
 .portf-item{
   margin-right: 30px;
   margin-top: 30px;
-  flex-basis : calc(100% / 3 - 30px) ; 
-
+  flex-basis : calc(100% / 3 - 30px);
 }
 .portfolio-foto .portfolio-work{
   margin-top: 20px;
-  margin-bottom: 4px;
+  margin-bottom: 0px;
   color: var(--title-text-color);
   font-size: 18px;
   font-weight: 700;
   line-height: 2 ;
   letter-spacing: 0.06em;
+  border-color: var(--primary-text-color);
   
 }
 .portfolio-foto .work-section{
   margin-bottom: 20px;
+  margin-top: 0px;
   color: var(--primary-text-color);
   font-size: 16px;
   line-height: 30px;
