--- a/css/styles.css
+++ b/css/styles.css
@@ -170,9 +170,17 @@ body {
 /*Features*/
 .features{
   display: inline-flex;
+  margin-right: -30px;
 }
-.item:not(:last-child ) { 
-  margin-bottom : 30 px; 
+.item{
+  margin-right: 30px;
+  flex-basis: calc((100% / 4) - 30px);
+}
+.item:last-child {
+margin-right: 0;
+}
+.features .item{
+  margin-top: 94px;
 }
 
 .features-title{
@@ -189,10 +197,14 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;  
 }
-.item{
-  display: inline-block;
-  margin-right: 30px;
-  margin-top: 94px;
+.features-text{
+  
+font-size: 14px;
+
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0.03em;
+text-align: left;
 
 }
 
@@ -273,9 +285,7 @@ body {
   display: inline-block;
   margin-bottom: 60px;
 }
-.addres-list{
-  display: block;
-}
+
 .footer-contact{
   
   color: var(--white);
@@ -285,9 +295,14 @@ body {
   text-decoration: none;
   font-style: normal;
 }
-.features-link{
-  margin-top: 9px;
-  margin-bottom: 9px;
+.footer-link{
+  
+  margin-bottom: 6px;
+  
+}
+.footer-link:last-child {
+margin-bottom: 0;
+  
 }
 .footer-item{
   color: var(--primary-text-color);
@@ -302,6 +317,7 @@ border-bottom: 1px solid #ECECEC;
 
 .portfolio-link{
   text-decoration: none;
+  
 }
 .portf-nav{
   display: flex;
@@ -345,8 +361,10 @@ border-bottom: 1px solid #ECECEC;
   margin-right: 30px;
   margin-top: 30px;
   flex-basis : calc(100% / 3 - 30px);
+  
 }
-.portfolio-foto .portfolio-work{
+
+.portfolio-work{
   margin-top: 20px;
   margin-bottom: 0px;
   color: var(--title-text-color);
@@ -357,7 +375,7 @@ border-bottom: 1px solid #ECECEC;
   border-color: var(--primary-text-color);
   
 }
-.portfolio-foto .work-section{
+.work-section{
   margin-bottom: 20px;
   margin-top: 0px;
   color: var(--primary-text-color);
