--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,8 @@ text-align: left;
   
 }
 .our-team-item{
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
   margin-right: 30px;
   flex-basis: calc((100% / 4) - 30px);
   background-color: var(--white);
@@ -316,9 +318,10 @@ border-bottom: 1px solid #ECECEC;
 }
 
 .portfolio-link{
-  text-decoration: none;
+  text-decoration: none;}
+
   
-}
+
 .portf-nav{
   display: flex;
   flex-wrap: wrap;
@@ -335,7 +338,7 @@ border-bottom: 1px solid #ECECEC;
   border-radius: 4px;
   border-color: transparent ;
   
-  background: #F5F4FA;
+  background: var(--backgraund-color2);
   color: var(--title-text-color) ;
   font-size: 16px;
   font-weight: 500;
@@ -361,12 +364,14 @@ border-bottom: 1px solid #ECECEC;
   margin-right: 30px;
   margin-top: 30px;
   flex-basis : calc(100% / 3 - 30px);
-  
+
+  border: 1px solid #EEEEEE;
 }
 
 .portfolio-work{
   margin-top: 20px;
   margin-bottom: 0px;
+  padding-left: 24px;
   color: var(--title-text-color);
   font-size: 18px;
   font-weight: 700;
@@ -378,6 +383,7 @@ border-bottom: 1px solid #ECECEC;
 .work-section{
   margin-bottom: 20px;
   margin-top: 0px;
+  padding-left: 24px;
   color: var(--primary-text-color);
   font-size: 16px;
   line-height: 30px;
