--- a/css/styles.css
+++ b/css/styles.css
@@ -335,9 +335,13 @@ border-bottom: 1px solid #ECECEC;
 
 
 .portolio-button{
+  display: block;
+  padding: 6px 22px;
+  outline: none;
+  border: none;
   border-radius: 4px;
   border-color: transparent ;
-  
+ 
   background: var(--backgraund-color2);
   color: var(--title-text-color) ;
   font-size: 16px;
@@ -347,6 +351,7 @@ border-bottom: 1px solid #ECECEC;
   text-align: center;
   
 }
+
 .portolio-button:hover,
 .portolio-button:focus{
   background: var(--accent);
