--- a/css/styles.css
+++ b/css/styles.css
@@ -137,9 +137,13 @@ body {
   text-transform: uppercase;
 
 }
+.hiro-title:hover{
+  text-decoration: underline ;
+}
 .hiro-botton{
   border-radius: 4px;
-  padding: 10px 32px;
+  border: none;
+  padding: 10px 34px;
   display: inline-block;
   min-width: 200px;
   height: 50px;
@@ -153,7 +157,9 @@ body {
   line-height: 1.87;
   letter-spacing: 0.06em;
   text-align: center;
-
+}
+.hiro-botton:hover{
+  text-decoration: underline;
 }
 
 /*Section*/
