--- a/css/styles.css
+++ b/css/styles.css
@@ -141,13 +141,16 @@ body {
   text-decoration: underline ;
 }
 .hiro-botton{
+  display: inline-flex;
+  justify-content: center;
   border-radius: 4px;
   border: none;
   padding: 10px 34px;
-  display: inline-block;
+  
   min-width: 200px;
   height: 50px;
   margin-bottom: 200px;
+  
   
   font-family: inherit;
   background: var(--accent);
